--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,16 +24,29 @@ jobs:
             flask-version: "1.0.*"
           - python-version: 3.6
             flask-version: "1.1.*"
+          - python-version: 3.6
+            flask-version: "2.0.*"
 
           - python-version: 3.7
             flask-version: "1.0.*"
           - python-version: 3.7
             flask-version: "1.1.*"
+          - python-version: 3.7
+            flask-version: "2.0.*"
 
           - python-version: 3.8
             flask-version: "1.0.*"
           - python-version: 3.8
             flask-version: "1.1.*"
+          - python-version: 3.8
+            flask-version: "2.0.*"
+
+          - python-version: 3.9
+            flask-version: "1.0.*"
+          - python-version: 3.9
+            flask-version: "1.1.*"
+          - python-version: 3.9
+            flask-version: "2.0.*"
 
     steps:
     - name: Checkout
