--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,7 @@
+---
 name: "build"
 
-on:
+on:  # yamllint disable-line rule:truthy
   pull_request:
   push:
     branches: master
@@ -47,27 +48,34 @@ jobs:
             flask-version: "1.1.*"
           - python-version: 3.9
             flask-version: "2.0.*"
+            coverage: true
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - name: Setup Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
+      - name: Setup Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Install Flask ${{ matrix.flask-version }}
-      run: |
-        pip install Flask==${{ matrix.flask-version }}
-        pip install pillow
-        pip install codecov
-        pip install mock
+      - name: Install Flask ${{ matrix.flask-version }}
+        run: |
+          pip install Flask==${{ matrix.flask-version }}
+          pip install pillow
+          pip install coverage
+          pip install mock
 
-    - name: Run tests
-      run: |
-        PYTHONPATH=".:tests:$PYTHONPATH" coverage run --omit='setup.py' --omit='tests/*' --source='.' setup.py test
+      - name: Run tests
+        run: |
+          make test
 
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1
+      - if: ${{ matrix.coverage }}
+        run: |
+          make coverage
 
+      - if: ${{ matrix.coverage }}
+        name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
