--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
             flask-version: "2.3.*"
           - python-version: 3.9
             flask-version: "2.3.*"
-          - python-version: 3.10
+          - python-version: "3.10"
             flask-version: "2.3.*"
           - python-version: 3.11
             flask-version: "2.3.*"
